@@ -1,5 +1,5 @@
 #!/bin/sh
-python ./gitcho.py change checkout master
+python ./gitcho.py --action=checkout --mode=ifnot --target=master
 git merge testing
 git push origin master
 git checkout testing
