@@ -16,3 +16,9 @@ P.S.Start edit at 10/05 til 11/05
 1, change the format of serial
 2, change the instruction of git.sh
 3, correct SCL info
+
+11052012002:
+1, rewrite gitcho.py
+
+11052012003:
+1,fix gitcho.py
